# red-carpet

./: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.in  red-carpet-mime.desktop  red-carpet.applications  red-carpet.console.in  red-carpet.desktop  red-carpet.pam.rh7  red-carpet.pam.rh8
art/: Makefile.am
help/: Makefile.am
help/C/: .cvsignore  Makefile.am  red-carpet-C.omf  red-carpet.xml
help/docbook/: Makefile.am  README.red-carpet
help/docbook/common/: ChangeLog  cs.xml  en.xml  sk.xml  tr.xml
help/docbook/html/: ChangeLog  param.xml  param.xsl  param.xweb  profile-chunk.xsl  profile-docbook.xsl
help/docbook/lib/: lib.xweb
po/: .cvsignore  ChangeLog  POTFILES.in  az.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  hr.po  hu.po  it.po  ja.po  mk.po  ml.po  ne.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sk.po  sq.po  sr.po  sr@Latn.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  (+1 more)
red_extra/: .cvsignore  Makefile.am  __init__.py  module.c  red_extra.defs  red_extra.override  redlistmodel.c  redlistmodel.h  redlistview.c  redlistview.h
src/: .cvsignore  ChangeLog  Makefile.am  import-chaser.py  import-checker.py  kdesu-wrapper.in  rcd_util.py  red-carpet.in  red_about.py  red_actionbar.py  red_activation.py  red_appwindow.py  red_bundlearray.py  red_bundlecomponent.py  red_bundlesearchbox.py  red_bundleview.py  red_catalog.py  red_catalogoption.py  red_channelmodel.py  red_channeloption.py  red_component.py  red_componentbook.py  red_connection.py  red_console.py  red_deaddaemon.py  red_depcomponent.py  red_depview.py  red_dirselection.py  red_emptypage.py  red_gettext.py  red_history.py  red_installfiles.py  red_listmodel.py  red_locks.py  red_main.py  red_menubar.py  red_mirrors.py  red_mount.py  red_my_computer.py  red_news.py  (+35 more)
trayicon/: Makefile.am  red-carpet-icon.in  red_icon_main.py
trayicon/bindings/: Makefile.am  __init__.py  module.c
ximian_unmarshaller/: .cvsignore  Makefile.am  setup.py  unmarshaller.c
